--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
               <div class="restaurants-section__cards-container__cards__content__title">
                 <h4>La palette du goût</h4>
                 <i class="fa-regular fa-heart"></i>
+                <i class="fa-solid fa-heart"></i>
                 <div><p>Ménilmontant</p></div>
               </div>
             </div>
@@ -118,8 +119,8 @@
             <div class="restaurants-section__cards-container__cards__content">     
               <div class="restaurants-section__cards-container__cards__content__title">
                 <h4>La note enchantée</h4>
-               
-              <i class="fa-regular fa-heart"></i>
+                <i class="fa-regular fa-heart"></i>
+                <i class="fa-solid fa-heart"></i>
                 <div><p>Charonne</p></div>
               </div>
             </div>
@@ -133,7 +134,8 @@
             <div class="restaurants-section__cards-container__cards__content">     
               <div class="restaurants-section__cards-container__cards__content__title">
                 <h4>À la française</h4>
-              <i class="fa-regular fa-heart"></i>
+                <i class="fa-regular fa-heart"></i>
+              <i class="fa-solid fa-heart"></i>
                 <div><p>Cité Rouge</p></div>
               </div>
             </div>
@@ -149,6 +151,7 @@
               <div class="restaurants-section__cards-container__cards__content__title">
                 <h4>Le délice des sens</h4>
                 <i class="fa-regular fa-heart"></i>
+                <i class="fa-solid fa-heart"></i>
                 <div><p>Folie Méricourt</p></div>
               </div>
             </div>
