--- a/restaurants/_la-palette-du-gout.html
+++ b/restaurants/_la-palette-du-gout.html
@@ -57,6 +57,7 @@
        
             <h1>La palette du goût</h1>
               <i class="fa-regular fa-heart"></i>
+              <i class="fa-solid fa-heart"></i>
             
           </div>
           <section class="menus-container__title">
@@ -72,7 +73,11 @@
  <div class="menus-container__cards_content">
   <p>Au piment d'Espelette</p>
   <p>25€</p>
- </div>     
+ </div> 
+<span class="menus-container__cards_content__price__anim">
+
+</span>
+
 </div>
 
 
