--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
           </div>
           </a>
 <div class="restaurants-section__cards-container__cards">
-         <a href="/restaurants/la-note-enchantee.html" id="lne">
+         <a href="./restaurants/la-note-enchantee.html" >
       
             <img
               src="./assets/img/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
@@ -126,7 +126,7 @@
             </div>
           </a>
         </div>
-            <a href="/restaurants/a-la-francaise.html">
+            <a href="./restaurants/a-la-francaise.html">
             <img
               src="./assets/img/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
               alt="visuel d'une assiette dressée en mode gastronomie à la française"
