--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
 
 <body>
 
+
+
   <header>
     <div class="header__logo">
       <img src="./assets/img/logo/ohmyfood.png" alt="logo de la société Ohmyfood">
@@ -33,6 +35,22 @@
     </div>
   </header>
   <div class="main-container">
+    <div class="loader">
+      <div class="cercle1">
+        <div class="circle1"></div>
+      </div>
+      <div class="log__anim">
+        <p>ohmyfood</p>
+      </div>
+      <div class="cercle2">
+        <div class="circle2"></div>
+      </div>
+      <div class="cercle5">
+        <div class="circle3">
+          <div class="circle4"></div>
+        </div>
+      </div>
+    </div>
     <section class="search-section">
       <h1>Réservez le menu qui vous convient</h1>
       <div>
