--- a/index.html
+++ b/index.html
@@ -35,11 +35,12 @@
     </div>
   </header>
   <div class="main-container">
+  <div class="main-container__loader">
     <div class="loader">
       <div class="cercle1">
         <div class="circle1"></div>
       </div>
-      <div class="log__anim">
+      <div class="circle1__log__anim">
         <p>ohmyfood</p>
       </div>
       <div class="cercle2">
@@ -51,6 +52,8 @@
         </div>
       </div>
     </div>
+  </div>
+    
     <section class="search-section">
       <h1>Réservez le menu qui vous convient</h1>
       <div>
