--- a/restaurants/a-la-francaise.html
+++ b/restaurants/a-la-francaise.html
@@ -58,8 +58,10 @@
             
 <div class="menus-container__cards">
   <div class="menus-container__cards_title">
-    <h3 class="menus-container__cards_title__text">Fricassée d'escargots</h3>
-    <p class="menus-container__cards_title__text">Au piment d'Espelette</p>
+    <h3 class="menus-container__cards_title__text">Tartare de poulpe acidulé
+    </h3>
+    <p class="menus-container__cards_title__text">Aux zestes d'orange
+    </p>
   </div>
  
  <div class="menus-container__cards_content">
@@ -74,8 +76,9 @@
 
 <div class="menus-container__cards">
   <div class="menus-container__cards_title">
-    <h3 class="menus-container__cards_title__text">Foie gras de canard mi-cuit</h3>
-    <p class="menus-container__cards_title__text">Et ses copeaux de truffe noire</p>
+    <h3 class="menus-container__cards_title__text">Velouté de légumes d'antan
+    </h3>
+    <p class="menus-container__cards_title__text">Carotte, panais, topinambour</p>
   </div>
  
  <div class="menus-container__cards_content">
