--- a/restaurants/la-note-enchantee.html
+++ b/restaurants/la-note-enchantee.html
@@ -48,8 +48,8 @@
       
 <div class="main-container__img">
   <img
-  src="../assets/img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
-  alt="alt="visuel d'une assiette dressée en mode gastronomie à La Note Enchantée"">
+  src="../assets/img/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
+  alt="alt="visuel d'une assiette dressée en mode gastronomie à La Note Enchantée>
 </div>
    
       <div class="menus-container">
@@ -167,7 +167,7 @@
 
             <div class="menus-container__cards">
               <div class="menus-container__cards_title">
-                <h3 class="menus-container__cards_title__text"Mijoté de queue de bœuf</h3>
+                <h3 class="menus-container__cards_title__text">Mijoté de queue de bœuf</h3>
                 <p class="menus-container__cards_title__text">Et riz sauvage aux zestes de citron
                 </p>
               </div>
