--- a/index.html
+++ b/index.html
@@ -188,17 +188,19 @@
       <h5>Ohmyfood</h5>
       <div class="partnership">
         <ul>
-          <li>
-            <p>
-              <i class="fa-solid fa-utensils" id="ustensils"></i>
-              Proposer un restaurant
-            </p>
-          </li>
-          <li>
-            <p>
-              <i class="fa-solid fa-handshake-angle" id="handshake"></i>Devenir partenaire
-            </p>
-          </li>
+          
+            <li>
+              <p class="partnership__visu">
+                <i class="fa-solid fa-utensils" id="ustensils"></i>
+                Proposer un restaurant
+              </p>
+            </li>
+            <li>
+              <p class="partnership__visu">
+                <i class="fa-solid fa-handshake-angle" id="handshake"></i>Devenir partenaire
+              </p>
+            </li>
+        
           <li>Mentions légales</li>
           <li>Contacts</li>
         </ul>
