--- a/index.html
+++ b/index.html
@@ -214,9 +214,9 @@
               </p>
             </li>
         
-          <li id="ml">Mentions légales</li>
+          </li>Mentions légales</li>
           <li>
-            <a href="mailto:someone@example.com?subject=Questions" title="">Contact</a>
+            <a href="mailto:" id="ml"> </a>Contact</a>
           </li>
       
         </ul>
