--- a/restaurants/la-palette-du-gout.html
+++ b/restaurants/la-palette-du-gout.html
@@ -28,11 +28,8 @@
     <header>
       <div class="header__pages">
 
-
-
-
         <div class="header__pages__logo">
-          <a href="../index.html"><i class="fa-solid fa-arrow-left"></i></a>
+          <a href="../index.html"><i class="fas fa-arrow-left"></i></a>
           <img src="../assets/img/logo/ohmyfood.png" alt="logo de la société Ohmyfood" />
         </div>
       </div>
@@ -44,17 +41,28 @@
           dressée en mode gastronomie à La Palette du Goût"">
       </div>
 
+      <div class="menus-container__name__logo">
+        <div class="menus-container__name__logo__arrow">
+          <a href="../index.html"><span class="fas fa-arrow-left" id="arrow-mdl"></span></a>
+        </div>
+
+        <img src="../assets/img/logo/ohmyfood.png" alt="logo de la société Ohmyfood" />
+      </div>
+
+
       <div class="menus-container">
 
         <div class="menus-container__name">
 
           <h1>La palette du goût</h1>
-          <i class="fa-regular fa-heart"></i>
-          <i class="fa-solid fa-heart"></i>
-
-          <div class="menus-container__name__logo"></div>
-
+          <div class="menus-container__name__heart">
+            <i class="fa-regular fa-heart"></i>
+            <i class="fa-solid fa-heart"></i>
+          </div>
         </div>
+
+
+
         <section class="menus-container__title" id="entrees">
           <h2>entrées</h2>
 
