--- a/restaurants/la-palette-du-gout.html
+++ b/restaurants/la-palette-du-gout.html
@@ -75,15 +75,12 @@
             </div>
 
             <div class="menus-container__cards_content">
-              <p class="menus-container__cards_content__price">25€ <span
-                  class="menus-container__cards_content__price__anim">
+              <p class="menus-container__cards_content__price">25€</ p>
+                <span class="menus-container__cards_content__price__anim">
                   <i class="fa-solid fa-circle-check"></i>
-                </span></ p>
-
+                </span>
             </div>
-
           </div>
-
 
           <div class="menus-container__cards">
             <div class="menus-container__cards_title">
@@ -97,9 +94,6 @@
                   <i class="fa-solid fa-circle-check"></i>
                 </span>
             </div>
-
-
-
           </div>
           <div class="menus-container__cards">
             <div class="menus-container__cards_title">
