--- a/restaurants/la-palette-du-gout.html
+++ b/restaurants/la-palette-du-gout.html
@@ -28,7 +28,7 @@
     <header>
       <div class="header__pages">
 
-        <div class="header__pages__logo">
+        <div class="header__pages__logo"  id="top">
           <a href="../index.html"><i class="fas fa-arrow-left"></i></a>
           <img src="../assets/img/logo/ohmyfood.png" alt="logo de la société Ohmyfood" />
         </div>
@@ -222,7 +222,8 @@
     </div>
 
     <div class="menus-container__cards_content__button">
-      <button>Commander</button>
+      <a href="#top"> <button>Commander</button></a>
+     
     </div>
 
     </section>
