--- a/index.html
+++ b/index.html
@@ -7,10 +7,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>OhMyFood, Commandez vos menus gastronomiques en ligne</title>
-  <meta name="description" content="Ohmyfood est une entreprise de commande de repas en ligne.
-   Notre concept permet aux utilisateurs de composer restaurants, car leur menu est préparé à l’avance. 
-   Plus de perte de temps à consulter la carte/>
+  <title>OhMyFood - Commandez vos menus gastronomiques en ligne</title>
+  <meta name="description" content="Ohmyfood est une entreprise de commande de repas en ligne. Notre concept permet aux utilisateurs de composer restaurants, car leur menu est préparé à l’avance. Plus de perte de temps à consulter la carte.>
   <link rel="shortcut icon" href="./assets/img/logo/ic-plate.png" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
     integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
