--- a/restaurants/la-palette-du-gout.html
+++ b/restaurants/la-palette-du-gout.html
@@ -28,9 +28,17 @@
     <header>
       <div class="header__pages">
 
-        <div class="header__pages__logo"  id="top">
-          <a href="../index.html"><i class="fas fa-arrow-left"></i></a>
-          <img src="../assets/img/logo/ohmyfood.png" alt="logo de la société Ohmyfood" />
+        <div class="header__pages__logo" id="top">
+          <div class="header__pages__logo__arrow">
+            <a href="../index.html"><i class="fas fa-arrow-left"></i></a>
+          </div>
+          <div class="header__pages__logo__img">
+            <img src="../assets/img/logo/ohmyfood.png" alt="logo de la société Ohmyfood" />
+          </div>
+       
+ 
+
+
         </div>
       </div>
     </header>
@@ -41,13 +49,6 @@
           dressée en mode gastronomie à La Palette du Goût"">
       </div>
 
-      <div class="menus-container__name__logo">
-        <div class="menus-container__name__logo__arrow">
-          <a href="../index.html"><span class="fas fa-arrow-left" id="arrow-mdl"></span></a>
-        </div>
-
-        <img src="../assets/img/logo/ohmyfood.png" alt="logo de la société Ohmyfood" />
-      </div>
 
 
       <div class="menus-container">
@@ -60,14 +61,8 @@
             <i class="fa-solid fa-heart"></i>
           </div>
         </div>
-
-
-
-        <section class="menus-container__title" id="entrees">
+        <section class="menus-container__title" id="plats">
           <h2>entrées</h2>
-
-
-
           <div class="menus-container__cards">
             <div class="menus-container__cards_title">
               <h3 class="menus-container__cards_title__text">Fricassée d'escargots</h3>
@@ -75,12 +70,17 @@
             </div>
 
             <div class="menus-container__cards_content">
-              <p class="menus-container__cards_content__price">25€</ p>
+
+              <div class="menus-container__cards_content__price">
+                <p>25€</p>
                 <span class="menus-container__cards_content__price__anim">
-                  <i class="fa-solid fa-circle-check"></i>
+                  <i class="fas fa-circle-check"></i>
                 </span>
+              </div>
             </div>
+
           </div>
+
 
           <div class="menus-container__cards">
             <div class="menus-container__cards_title">
@@ -89,11 +89,19 @@
             </div>
 
             <div class="menus-container__cards_content">
-              <p class="menus-container__cards_content__price">35€</ p>
+
+              <div class="menus-container__cards_content__price">
+                <p>35€</p>
                 <span class="menus-container__cards_content__price__anim">
-                  <i class="fa-solid fa-circle-check"></i>
+
+                  <i class="fas fa-circle-check"></i>
                 </span>
+
+
+
+              </div>
             </div>
+
           </div>
           <div class="menus-container__cards">
             <div class="menus-container__cards_title">
@@ -102,18 +110,37 @@
             </div>
 
             <div class="menus-container__cards_content">
-              <p class="menus-container__cards_content__price">20€</ p>
+
+              <div class="menus-container__cards_content__price">
+                <p>20€</p>
                 <span class="menus-container__cards_content__price__anim">
-                  <i class="fa-solid fa-circle-check"></i>
+
+                  <i class="fas fa-circle-check"></i>
                 </span>
+
+
+
+              </div>
             </div>
 
           </div>
 
 
-
         </section>
+
+
+
+
+
+
+
+
+
+
+
+
         <section class="menus-container__title" id="plats">
+
           <h2>plats</h2>
 
           <div class="menus-container__cards">
@@ -123,10 +150,17 @@
             </div>
 
             <div class="menus-container__cards_content">
-              <p class="menus-container__cards_content__price">40€</ p>
+
+              <div class="menus-container__cards_content__price">
+                <p>40€</p>
                 <span class="menus-container__cards_content__price__anim">
-                  <i class="fa-solid fa-circle-check"></i>
+
+                  <i class="fas fa-circle-check"></i>
                 </span>
+
+
+
+              </div>
             </div>
 
           </div>
@@ -140,11 +174,19 @@
             </div>
 
             <div class="menus-container__cards_content">
-              <p class="menus-container__cards_content__price">35€</ p>
+
+              <div class="menus-container__cards_content__price">
+                <p>35€</p>
                 <span class="menus-container__cards_content__price__anim">
-                  <i class="fa-solid fa-circle-check"></i>
+
+                  <i class="fas fa-circle-check"></i>
                 </span>
+
+
+
+              </div>
             </div>
+
 
           </div>
 
@@ -155,11 +197,19 @@
             </div>
 
             <div class="menus-container__cards_content">
-              <p class="menus-container__cards_content__price">44€</ p>
+
+              <div class="menus-container__cards_content__price">
+                <p>44€</p>
                 <span class="menus-container__cards_content__price__anim">
-                  <i class="fa-solid fa-circle-check"></i>
+
+                  <i class="fas fa-circle-check"></i>
                 </span>
+
+
+
+              </div>
             </div>
+
 
           </div>
         </section>
@@ -175,11 +225,19 @@
             </div>
 
             <div class="menus-container__cards_content">
-              <p class="menus-container__cards_content__price">18€</ p>
+
+              <div class="menus-container__cards_content__price">
+                <p>18€</p>
                 <span class="menus-container__cards_content__price__anim">
-                  <i class="fa-solid fa-circle-check"></i>
+
+                  <i class="fas fa-circle-check"></i>
                 </span>
+
+
+
+              </div>
             </div>
+
 
           </div>
 
@@ -191,11 +249,19 @@
             </div>
 
             <div class="menus-container__cards_content">
-              <p class="menus-container__cards_content__price">22€</ p>
+
+              <div class="menus-container__cards_content__price">
+                <p>22€</p>
                 <span class="menus-container__cards_content__price__anim">
-                  <i class="fa-solid fa-circle-check"></i>
+
+                  <i class="fas fa-circle-check"></i>
                 </span>
+
+
+
+              </div>
             </div>
+
 
 
           </div>
@@ -208,11 +274,19 @@
             </div>
 
             <div class="menus-container__cards_content">
-              <p class="menus-container__cards_content__price">23€</ p>
+
+              <div class="menus-container__cards_content__price">
+                <p>23€</p>
                 <span class="menus-container__cards_content__price__anim">
-                  <i class="fa-solid fa-circle-check"></i>
+
+                  <i class="fas fa-circle-check"></i>
                 </span>
+
+
+
+              </div>
             </div>
+
 
           </div>
 
@@ -223,7 +297,7 @@
 
     <div class="menus-container__cards_content__button">
       <a href="#top"> <button>Commander</button></a>
-     
+
     </div>
 
     </section>
