--- a/index.html
+++ b/index.html
@@ -214,7 +214,8 @@
         
           </li>Mentions légales</li>
           <li>
-            <a href="mailto:" id="ml"> </a>Contact</a>
+            <a href="mailto:email@contact.com" id="ml">Contact</a>
+
           </li>
       
         </ul>
