--- a/restaurants/la-note-enchantee.html
+++ b/restaurants/la-note-enchantee.html
@@ -32,21 +32,13 @@
 
   <body>
     <header>
-      <div class="header__pages">
-
-        <div class="header__pages__logo" id="top">
-          <div class="header__pages__logo__arrow">
-            <a href="../index.html"><i class="fas fa-arrow-left"></i></a>
-          </div>
-          <div class="header__pages__logo__img">
-            <img src="../assets/img/logo/ohmyfood.png" alt="logo de la société Ohmyfood" />
-          </div>
-       
- 
-
-
+      <div class="header__logo">
+        <div class="header__logo__arrow">
+          <a href="../index.html"><i class="fas fa-arrow-left"></i></a>
         </div>
+        <img src="../assets/img/logo/ohmyfood.png" alt="logo de la société Ohmyfood">
       </div>
+  
     </header>
     <div class="main-container">
       
@@ -279,7 +271,7 @@
         </div>
       </div>
 <div class="menus-container__cards_content__button">
-  <button>Commander</button>  
+  <a href="#top"> <button>Commander</button></a>
 </div>
  
           </section>
