--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <a href="#">
           <div class="choose-section__restos">
 
-            <div class="choose-section__restos__ellipse">1</div>
+            <div class="choose-section__restos__ellipse"><p>1</p></div>
             <div> <i class="fa-solid fa-mobile-screen-button"></i></div>
 
 
@@ -93,7 +93,7 @@
 
         <a href="#">
           <div class="choose-section__restos">
-            <div class="choose-section__restos__ellipse">2</div>
+            <div class="choose-section__restos__ellipse"><p>2</p></div>
             <div><i class="fa-solid fa-list-ul"></i></div>
             <p>Composez votre menu</p>
           </div>
@@ -102,7 +102,7 @@
 
         <a href="#">
           <div class="choose-section__restos">
-            <div class="choose-section__restos__ellipse">3</div>
+            <div class="choose-section__restos__ellipse"><p>3</p></div>
             <div> <i class="fa-solid fa-store"></i></div>
             <p>
               Dégustez au
