modif fontawsome angle

--- a/restaurants/a-la-francaise.html
+++ b/restaurants/a-la-francaise.html
@@ -262,7 +262,7 @@ revisité"
           </li>
           <li>
             <p class="partnership__visu">
-              <i class="fa-solid fa-handshake-angle" id="handshake"></i>Devenir
+              <i class="fa-solid fa-handshake" id="handshake"></i>Devenir
               partenaire
             </p>
           </li>
