--- a/restaurants/la-note-enchantee.html
+++ b/restaurants/la-note-enchantee.html
@@ -282,7 +282,7 @@
           </li>
           <li>
             <p class="partnership__visu">
-              <i class="fa-solid fa-handshake-angle" id="handshake"></i>Devenir
+              <i class="fa-solid fa-handshake" id="handshake"></i>Devenir
               partenaire
             </p>
           </li>
