--- a/restaurants/la-palette-du-gout.html
+++ b/restaurants/la-palette-du-gout.html
@@ -233,8 +233,8 @@
             </li>
             <li>
               <p class="partnership__visu">
-                <i class="fa-solid fa-handshake-angle" id="handshake"></i
-                >Devenir partenaire
+                <i class="fa-solid fa-handshake" id="handshake"></i>Devenir
+                partenaire
               </p>
             </li>
 
